--- a/asset/style.scss
+++ b/asset/style.scss
@@ -1,11 +1,9 @@
 $primary: hsl(200, 80%, 40%);
-$serif: Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua",
-    Georgia, serif;
+$serif: "Merriweather", Georgia, serif;
 $mono: "Source Code Pro", Menlo, Consolas, Monaco, monospace;
 $sans: "Source Sans Pro", "Lucida Grande", "Lucida Sans Unicode",
     Verdana, sans-serif;
-$header: "Source Sans Pro", Palatino, "Palatino Linotype", "Palatino LT STD",
-    "Book Antiqua", Georgia, serif;
+$header: "Source Sans Pro", Georgia, serif;
 
 $hairline: #eee;
 
@@ -16,7 +14,7 @@ body, h1, h2, h3, h4, p, blockquote, code, ul, ol, dl, dd, img {
 body {
   line-height: 24px;
   color: #222;
-  font: normal 16px/24px $serif;
+  font: normal 14px/24px $serif;
 
   background: hsl(40, 10%, 90%);
   background-image: url("images/background.png");
@@ -102,6 +100,20 @@ body {
     font: 13px/20px $sans;
     font-weight: 300;
   }
+}
+
+.scrim {
+  display: none;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+}
+
+.scrim.expanded {
+  display: block;
 }
 
 .nav.expanded {
@@ -224,12 +236,24 @@ img.profile {
 }
 
 blockquote {
-  padding: 0 20px;
-}
+  padding: 10px;
+  background: hsl(200, 20%, 98%);
+  border: solid 1px hsl(200, 20%, 96%);
+  border-bottom: solid 1px hsl(200, 30%, 90%);
+  border-radius: 3px;
 
-blockquote p {
-  font: italic 17px/26px $serif;
-  color: #777;
+  p {
+    font: italic 14px/24px $serif;
+    color: hsl(200, 10%, 50%);
+  }
+
+  p:first-child {
+    margin-top: 0;
+  }
+
+  p:last-child {
+    margin-bottom: 0;
+  }
 }
 
 code {
