--- a/html/style.css
+++ b/html/style.css
@@ -176,7 +176,7 @@ blockquote {
     margin-bottom: 0; }
 
 code {
-  color: #477085;
+  color: #526d7a;
   font: normal 15px "Source Code Pro", Menlo, Consolas, Monaco, monospace;
   white-space: nowrap; }
 
